@@ -60,6 +60,13 @@ pywbem-0.7  YYYY-MM-DD
 
     * Added a powerful MOF compiler.  (Bart Whiteley)
 
+    * Added property filtering to CIMInstance.  (Bart Whiteley)
+
+    * Added value attribute to CIMParameter.  (Bart Whiteley)
+
+    * Rigged CIMInstance to automagically update CIMInstance.path.keybindings
+      as key properties are set.  (Bart Whiteley)
+
 pywbem-0.6  2007-10-26
 
   LICENSING:
